# standard-extended-cpp-lib

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
dependencies/: CMakeLists.txt
docs/: Doxyfile
docs/html/: annotated.html  bfl-perf-timer_8hpp.html  bfl-perf-timer_8hpp_source.html  bfl-ranges_8hpp.html  bfl-ranges_8hpp_source.html  classBarEnvironment-members.html  classBarEnvironment.html  classBase-members.html  classBase.html  classBiggestIntConvertible-members.html  classBiggestIntConvertible.html  classChildClassWithStreamOperator.html  classChildClassWithoutStreamOperator.html  classCommentTest.html  classCommonTest-members.html  classCommonTest.html  classConstructFromT-members.html  classConstructFromT.html  classContainerTest-members.html  classContainerTest.html  classConversionHelperBase.html  classConversionHelperDerived.html  classCounter-members.html  classCounter.html  classCustomFunctionNamingTest.html  classCustomFunctorNamingTest.html  classCustomIntegerNamingTest.html  classCustomLambdaNamingTest.html  classCustomStructNamingTest.html  classDerivedTest-members.html  classDerivedTest.html  classDetectNotInstantiatedTest-members.html  classDetectNotInstantiatedTest.html  classDetectNotInstantiatedTypesTest-members.html  classDetectNotInstantiatedTypesTest.html  classDisabledTest.html  classDogAdder-members.html  classDogAdder.html  classDynamicFixture-members.html  classDynamicFixture.html  (+1093 more)
docs/latex/: annotated.tex  bfl-perf-timer_8hpp.tex  bfl-perf-timer_8hpp_source.tex  bfl-ranges_8hpp.tex  bfl-ranges_8hpp_source.tex  classBarEnvironment.tex  classBase.tex  classBiggestIntConvertible.tex  classChildClassWithStreamOperator.tex  classChildClassWithoutStreamOperator.tex  (+657 more)
libs/: CMakeLists.txt
test/: CMakeLists.txt  bfl-perf-timer.pass.cpp  bfl-ranges.pass.cpp  main.pass.cpp  utf8-string.pass.cpp
(+86 files in other folders)
